--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <h3 class="text-center pb-5">Nuestro Blog</h3>
         <div class="row entrada mt-3">
           <div class="col-md-5">
-            <img src="/img/blog1.jpg" class="img-fluid">
+            <img src="img/blog1.jpg" class="img-fluid">
           </div>
           <div class="col-md-7">
             <h3>Terraza en el techo de tu casa.</h3>
@@ -242,7 +242,7 @@
         </div>
         <div class="row entrada mt-3">
           <div class="col-md-5">
-            <img src="/img/blog2.jpg" class="img-fluid">
+            <img src="img/blog2.jpg" class="img-fluid">
           </div>
           <div class="col-md-7">
             <h3>Guía para decorar tu casa.</h3>
